refactor: select 쿼리 최적화